[package]
name = "garbage-term"
version = "0.1.0"
authors = ["Brian Dawn <brian.t.dawn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glyph_brush = "0.7.2"
gfx = "0.18"
log = "0.4"
gfx_core = "0.9"
gfx_glyph = "0.17.0"
anyhow = "1.0.40"

env_logger = { version = "0.8", default-features = false }
approx = "0.4"
glutin = "0.26"
old_school_gfx_glutin_ext = "0.26"
cgmath = "0.18"
spin_sleep = "1"